try to run phpdocumentor in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,6 +132,15 @@ jobs:
       - run:
           name: Extract coverage HTML report
           command: docker cp elabtmp:/elabftw/tests/_output/coverage coverage-html
+      - run:
+          name: Generate the php documentation
+          command: docker exec -it elabtmp phpDocumentor.phar -i ./cache -i ./uploads -d ./src/ -t phpdoc --setting=graphs.enabled=true
+      - run:
+          name: Extract the php documentation
+          command: docker cp elabtmp:phpdoc phpdoc-html
+      - store_artifacts:
+          path: phpdoc-html
+          destination: phpdoc-html
       - store_artifacts:
           path: coverage-html
           destination: coverage-html
