some sonarqube fixes

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
 sonar.sources=.
-sonar.exclusions=src/js/tinymce-plugins/**,src/scss/fontawesome/*,tests/**
+sonar.exclusions=src/js/tinymce-plugins/**,src/scss/fontawesome/*,tests/**,uploads/**,cache/**
 sonar.tests=tests
 sonar.php.coverage.reportPaths=tests/_output/coverage-sonar.xml
