use sed for setting the DB_HOST in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,12 +39,14 @@ jobs:
           command: |
             sed -i '\#volumes:#D' tests/docker-compose.yml
             sed -i '\#- \.\.:/elabftw#D' tests/docker-compose.yml
+            # the DB_HOST is set here because the elabftw-user.env file will not override the docker-compose.yml env value
+            sed -i '/DB_HOST=mysqltmp/DB_HOST=127.0.0.1' tests/docker-compose.yml
       - run:
           name: Build elabtmp image and start containers
           command: |
             docker build -q -t elabtmp -f tests/elabtmp.Dockerfile .
             docker build -q --no-cache -t elabtmp -f tests/circleci.Dockerfile .
-            printf "DB_HOST=127.0.0.1\nELABFTW_USER=nginx\nELABFTW_GROUP=nginx\nELABFTW_USERID=101\nELABFTW_GROUPID=101\n" > tests/elabftw-user.env
+            printf "ELABFTW_USER=nginx\nELABFTW_GROUP=nginx\nELABFTW_USERID=101\nELABFTW_GROUPID=101\n" > tests/elabftw-user.env
             docker compose --ansi never -f tests/docker-compose.yml up -d --quiet-pull
       # Restore dependency cache
       #- restore_cache:
