don't infer things in scrutinizer

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -28,6 +28,11 @@ build:
     node: v16.19.0
   nodes:
     analysis:
+      dependencies:
+        override:
+          - echo do nothing here
+        before:
+          - echo do nothing here
       tests:
         override:
           - php-scrutinizer-run
