--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -23,6 +23,8 @@ build:
   environment:
     docker:
       remote_engine: true
+    php:
+      version: 8.1
   nodes:
     analysis:
       dependencies:
