--- a/.github/ISSUE_TEMPLATE/user_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/user_bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug report (user)
-about: For user facing bugs, reported by users without Sysadmin/console access
+description: For user facing bugs, reported by users without Sysadmin/console access
 labels: bug
 body:
 - type: markdown
