--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,100 +1,59 @@
-name: Bug report (sysadmin)
-description: Bug report form for issues related to the full software suite, its installation, maintenance, etc... Use this if you are a Sysadmin with shell access.
-labels: ['bug']
+name: 🐞 Bug
+description: File a bug/issue
+title: "[BUG] <title>"
+labels: [Bug, Needs Triage]
 body:
-  - type: markdown
-    attributes:
-      value: |
-        ## Welcome!
-        You are about to *report a bug* you encountered in eLabFTW. Please use the 'Feature Request' template if you want to propose a new feature instead.
-
-        This issue tracker is used to track actual bugs. Please use [the discussions](https://github.com/elabftw/elabftw/discussions/) or [chat](https://gitter.im/elabftw/elabftw) if you have a question, e.g. to get help with configuration of your instance. This bug report form is mainly addressed to Sysadmins with shell access to the instance server.
-  - type: textarea
-    id: description
-    attributes:
-      label: Detailed description of the problem
-      description: |
-        In this section, please try to concentrate on observations. Only describe what you observed directly.
-      validations:
-        required: true
-  - type: textarea
-    id: expected-behavior
-    attributes:
-      label: Expected Behavior
-      description: |
-        Explain why you consider the described behavior (above) to be wrong. What did you expect instead?
-      validations:
-        required: true
-  - type: textarea
-    id: steps
-    attributes:
-    label: Steps to reproduce the behavior
-    description: |
-      The more time you spend describing an easy way to reproduce the behavior (if this is possible), the easier it is for the project developers to fix it! Don't hesitate to add screenshots.
+- type: checkboxes
+  attributes:
+    label: Is there an existing issue for this?
+    description: Please search to see if an issue already exists for the bug you encountered.
+    options:
+    - label: I have searched the existing issues
+      required: true
+- type: textarea
+  attributes:
+    label: Current Behavior
+    description: A concise description of what you're experiencing.
+  validations:
+    required: false
+- type: textarea
+  attributes:
+    label: Expected Behavior
+    description: A concise description of what you expected to happen.
+  validations:
+    required: false
+- type: textarea
+  attributes:
+    label: Steps To Reproduce
+    description: Steps to reproduce the behavior.
     placeholder: |
-      1.
-      2.
-      3.
-    validations:
-      required: true
-  - type: textarea
-    id: possible-cause
-    attributes:
-      label: Do you have any idea what may have caused this?
-      description: |
-        Simply leave this empty if you do not.
-  - type: textarea
-    id: possible-solution
-    attributes:
-      label: Do you have an idea how to solve the issue?
-      description: |
-        Simply leave this empty if you do not.
-  - type: textarea
-    id: configuration
-    attributes:
-      label: What is your docker-compose configuration?
-      description: |
-        Generate a password-less configuration with `grep -vE "^[[:blank:]]*#|^[[:blank:]]*$" /etc/elabftw.yml | grep -vE "PASSWORD|SECRET_KEY"`
-      render: yaml
-    validations:
-      required: true
-  - type: textarea
-    id: uname
-    attributes:
-      label: 'Output of `uname -a`'
-      description: |
-        Please run `uname -a` and paste the output into this field.
-      render: plain
-    validations:
-      required: true
-  - type: textarea
-    id: os-release
-    attributes:
-      label: 'Output of `cat /etc/os-release`'
-      description: |
-        Please run `cat /etc/os-release` and paste the output into this field.
-      render: plain
-    validations:
-      required: true
-  - type: textarea
-    id: docker-info
-    attributes:
-      label: 'Output of `docker info`'
-      description: |
-        Please run `docker info` and paste the output into this field.
-      render: plain
-    validations:
-      required: true
-  - type: textarea
-    id: php-logs
-    attributes:
-      label: Relevant php error log entry
-      description: |
-        If the bug triggers an error in the PHP error log, paste it here. Use `docker logs elabftw 1>/dev/null` to see errors from the logs.
-      render: plain
-  - type: textarea
-    id: additional
-    attributes:
-      label: Additional information
-      description: |
-        Any additional information about your environment that may be useful to know about. Like the browser type/version if it is a client issue.
+      1. In this environment...
+      2. With this config...
+      3. Run '...'
+      4. See error...
+  validations:
+    required: false
+- type: textarea
+  attributes:
+    label: Environment
+    description: |
+      examples:
+        - **OS**: Ubuntu 20.04
+        - **Node**: 13.14.0
+        - **npm**: 7.6.3
+    value: |
+        - OS:
+        - Node:
+        - npm:
+    render: markdown
+  validations:
+    required: false
+- type: textarea
+  attributes:
+    label: Anything else?
+    description: |
+      Links? References? Anything that will give us more context about the issue you are encountering!
+
+      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+  validations:
+    required: false
