--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -4,8 +4,7 @@ labels: [bug]
 body:
   - type: markdown
     attributes:
-      value: |
-        You are about to *report a bug* you encountered in eLabFTW. Please use the 'Feature Request' template if you want to propose a new feature instead.
+      value: "Hello"
   - type: textarea
     id: description
     attributes:
