--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -85,3 +85,10 @@ body:
       render: plain
     validations:
       required: true
+  - type: textarea
+    id: php-logs
+    attributes:
+      label: Relevant php error log entry
+      description: |
+        If the bug triggers an error in the PHP error log, paste it here. Use `docker logs elabftw 1>/dev/null` to see errors from the logs.
+      render: plain
