--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -92,3 +92,9 @@ body:
       description: |
         If the bug triggers an error in the PHP error log, paste it here. Use `docker logs elabftw 1>/dev/null` to see errors from the logs.
       render: plain
+  - type: textarea
+    id: additional
+    attributes:
+      label: Additional information
+      description: |
+        Any additional information about your environment that may be useful to know about. Like the browser type/version if it is a client issue.
