--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-about: I have a suggestion!
+description: I have a suggestion!
 labels: [feature request]
 body:
   - type: textarea
