--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature request
 description: I have a suggestion!
-labels: [feature request]
+labels: ['feature request']
 body:
   - type: textarea
     id: description
