--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -2,11 +2,7 @@ name: Feature request
 description: I have a suggestion!
 labels: ['feature request']
 body:
-  - type: checkboxes
-    id: pro-support
+  - type: textarea
+    id: description
     attributes:
-      label: Do you have PRO Support or are using the PRO Hosted version?
-      options:
-        - label: Yes
-        - label: No
-        - label: I don't know
+      label: Describe your feature request precisely
