--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "symfony/http-foundation": "^6.0",
     "twig/twig": "^3.5.0",
     "monolog/monolog": "^3.1.0",
-    "maennchen/zipstream-php": "3.0.0-beta.2",
+    "maennchen/zipstream-php": "3.0.0",
     "league/csv": "^9.4",
     "mpdf/qrcode": "^1.0",
     "symfony/console": "^6.0",
