remove useless code as body is never null

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # must be unique in a given SonarQube instance
 sonar.sources=.
 sonar.exclusions=src/js/tinymce-plugins/**,src/scss/fontawesome/*,tests/**,uploads/**,cache/**
+sonar.text.excluded.file.suffixes=.asn1,.eln
 sonar.tests=tests
 sonar.php.coverage.reportPaths=tests/_output/coverage-sonar.xml
