--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,11 @@
         "src/models/notifications"
       ],
       "Elabftw\\Services\\": [
-        "src/services"
+        "src/services",
+        "src/services/auth",
+        "src/services/import",
+        "src/services/make",
+        "src/services/storage"
       ],
       "Elabftw\\Services\\AdvancedSearchQuery\\Collectors\\": [
         "src/services/advancedSearchQuery/collectors"
