remove the fix-marked script, not needed anymore

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/jquery": "^3.5.1",
     "@types/jqueryui": "^1.12.14",
     "@types/luxon": "^3.0.0",
+    "@types/marked": "^4.0.8",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "cypress": "^10.0.0",
@@ -77,8 +78,8 @@
     "build:dev": "webpack-cli --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
-    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn fix-marked && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn fix-marked && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
+    "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
     "buildcss": "sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
     "buildparser": "node ./src/node/grammar/generateParser.js",
@@ -89,7 +90,6 @@
     "codespell": "codespell --config src/tools/codespellrc -L want to,sSee",
     "csslint": "./node_modules/.bin/stylelint src/scss/*.scss",
     "cy": "yarn run cypress run",
-    "fix-marked": "bash src/tools/fix-marked-lib.sh node_modules/marked/package.json",
     "full": "yarn phpcs && yarn jslint && yarn csslint && yarn psalm && yarn phpstan && yarn test unit",
     "jslint": "eslint --ext .ts src/ts",
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
