--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
     "codeception/module-phpbrowser": "^3.0",
     "symfony/yaml": "^6.0",
     "fakerphp/faker": "^1.13",
-    "codeception/c3": "^2.6"
+    "codeception/c3": "^2.6",
+    "rector/rector": "^0.15.19"
   },
   "autoload": {
     "psr-4": {
