--- a/package.json
+++ b/package.json
@@ -102,8 +102,8 @@
     "pre-commit": "yarn static && yarn phpcs-dry && yarn csslint && yarn jslint",
     "psalm": "psalm --no-progress -c=src/tools/psalm.xml",
     "psalmall": "psalm -c=src/tools/psalm.xml --show-info=true",
-    "rector": "docker run -v /home/ktr/.dev/elabftw:/project rector/rector:latest process /project/src --config /project/src/tools/rector.php --autoload-file /project/vendor/autoload.php",
-    "rector-dry": "docker run -v /home/ktr/.dev/elabftw:/project rector/rector:latest process /project/src --config /project/src/tools/rector.php --autoload-file /project/vendor/autoload.php --dry-run",
+    "rector": "./vendor/bin/rector process src --config src/tools/rector.php",
+    "rector-dry": "./vendor/bin/rector process src --config src/tools/rector.php --dry-run",
     "srcdoc": "phpDocumentor run --cache-folder /tmp -i ./cache -i ./uploads -d src/classes -d src/controllers -d src/exceptions -d src/interfaces -d src/models -d src/services -d src/traits -d web/app/controllers -t _srcdoc --setting=graphs.enabled=true",
     "static": "yarn psalm && yarn phpstan",
     "test": "tests/run.sh",
