--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
     "symfony/yaml": "^6.0",
     "fakerphp/faker": "^1.13",
     "codeception/c3": "^2.6",
-    "rector/rector": "^0.15.19"
+    "rector/rector": "^0.15.19",
+    "phpstan/phpstan": "^1.10"
   },
   "autoload": {
     "psr-4": {
