--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
     "phpmetrics": "phpmetrics --report-html=metrics . && firefox metrics/index.html",
-    "phpstan": "phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon",
+    "phpstan": "./vendor/bin/phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon",
     "pre-commit": "yarn static && yarn phpcs-dry && yarn csslint && yarn jslint",
     "psalm": "psalm --no-progress -c=src/tools/psalm.xml",
     "psalmall": "psalm -c=src/tools/psalm.xml --show-info=true",
