add Import into codeception whitelist

--- a/codeception.yml
+++ b/codeception.yml
@@ -8,6 +8,7 @@ coverage:
             - src/models/*
             - src/classes/*
             - src/Make/*
+            - src/Import/*
             - src/services/*
             - src/Storage/*
             - src/traits/*
