--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "api": "tests/run.sh api",
     "apidoc": "apidoc -c apidoc/v1/apidoc.json -o apidoc/v1/html -i src/controllers",
     "apidocv2": "docker run --name swagger --rm -e SWAGGER_JSON=/c/openapi.yaml -v $(pwd)/apidoc/v2/:/c -p 8085:8080 -d swaggerapi/swagger-ui && echo 'APIv2 Doc: http://localhost:8085' && echo 'Run docker stop swagger to remove it.'",
-    "brotli": "brotli -vf web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/ove/*.css web/assets/ove/*.js",
-    "zopfli": "zopfli -i1000 web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/ove/*.css web/assets/ove/*.js",
+    "brotli": "brotli -vf web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg web/assets/ove/*.css web/assets/ove/*.js",
+    "zopfli": "zopfli -i1000 web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg web/assets/ove/*.css web/assets/ove/*.js",
     "build": "webpack-cli --progress --config builder.js",
     "build:dev": "webpack-cli --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
