--- a/tests/populate-config.yml
+++ b/tests/populate-config.yml
@@ -32,6 +32,7 @@ users:
     firstname: Phpunit
     lastname: TestUser
     team: Alpha
+    orgid: internal_id_1
     api_key: apiKey4Test
     password: phpunitftw
     create_mfa_secret: false
@@ -52,6 +53,11 @@ users:
     firstname: Tata
     team: Bravo
     create_experiments: true
+
+  - email: somesamluser@example.com
+    team: Bravo
+    create_experiments: false
+    orgid: internal_id_42
 
   - team: Bravo
 
