improve on the default populate settings

--- a/tests/populate-config.yml
+++ b/tests/populate-config.yml
@@ -19,10 +19,11 @@ mailfrom: elabftw@example.com
 iterations: 12
 
 teams:
-  - Alpha
-  - Bravo
-  - Charlie
-  - Delta
+  - name: Alpha
+    default_category_name: Generated
+  - name: Bravo
+  - name: Charlie
+  - name: Delta
 
 # for users you need team as a minimum
 # the password will be the one provided on the command line for all users
