make faker a prod dependency

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "league/flysystem-aws-s3-v3": "^3.0",
     "jblond/twig-trans": "^1.0",
     "twig/intl-extra": "^3.3",
-    "symfony/yaml": "^6.2"
+    "symfony/yaml": "^6.2",
+    "fakerphp/faker": "^1.21"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
@@ -56,7 +57,6 @@
     "codeception/module-asserts": "^3.0.0",
     "codeception/module-rest": "^3.2.0",
     "codeception/module-phpbrowser": "^3.0",
-    "fakerphp/faker": "^1.13",
     "codeception/c3": "^2.8",
     "rector/rector": "^0.15.19",
     "phpstan/phpstan": "^1.10"
