add a japanese experiment

--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -134,6 +134,22 @@ experiments:
       - antimicrobial
       - chemistry
 
+  - title: フルーツフライの食性に関する研究
+    body: |
+      <p>背景： フルーツフライは、果物の成熟過程に大きな影響を与えます。そのため、フルーツフライの食性について研究することは、果物産業にとって重要な意義を持ちます。</p>
+
+      <p>目的： この研究の目的は、フルーツフライの好んで食べる果物の種類を調べることです。</p>
+
+      <p>方法： まず、フルーツフライを捕獲し、実験室で飼育します。次に、果物を複数用意し、フルーツフライが好んで食べる果物を調べます。果物は、リンゴ、バナナ、オレンジ、キウイフルーツ、グレープフルーツ、パイナップル、マンゴーの7種類を用意します。各果物を1つずつケージの中に入れ、フルーツフライが果物を食べたかどうかを確認します。果物は毎日交換し、同じ果物が連続して入れられないようにします。また、フルーツフライが果物を食べる時間帯も調べます。</p>
+
+      <p>結果： 実験の結果、フルーツフライが好んで食べる果物は、バナナ、マンゴー、パイナップルであることがわかりました。また、フルーツフライが果物を食べる時間帯は、午前中が多いことがわかりました。</p>
+
+      <p>結論： フルーツフライは、バナナ、マンゴー、パイナップルを好んで食べることが明らかになりました。この結果は、果物生産業にとって重要な情報となります。</p>
+    date: 20250102
+    tags:
+      - CJK
+      - ショウジョウバエ
+
   - title: Effect of temperature on enzyme activity
     user: 2
     body: |
