allow configuring user preferences in populate yaml

--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -51,6 +51,9 @@ users:
     create_experiments: true
     create_items: true
     create_templates: false
+    user_preferences:
+      orderby: lastchange
+      cjk_fonts: 1
 
   - email: titi@yopmail.com
     team: Alpha
