Add ignore-regex to ignore a line in French within README

--- a/.codespellrc
+++ b/.codespellrc
@@ -2,3 +2,4 @@
 skip = .git,*.pdf,*.svg,langs,*-langs,*.lock,*.yml.dist,package.json,*.scss
 # ssee is due to %sSee
 ignore-words-list = wantto,searchin,optionel,crate,ssee
+ignore-regex = \bprojet financé\b
