Run workflow on next and hypernext as well not only on master

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -3,9 +3,9 @@ name: Codespell
 
 on:
   push:
-    branches: [master]
+    branches: [master,hypernext,next]
   pull_request:
-    branches: [master]
+    branches: [master,hypernext,next]
 
 jobs:
   codespell:
