wip: start testing commands

--- a/codeception.yml
+++ b/codeception.yml
@@ -5,6 +5,7 @@ coverage:
     whitelist:
         include:
             - src/Auth/*
+            - src/commands/*
             - src/models/*
             - src/classes/*
             - src/Make/*
