--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -11,15 +11,17 @@ services:
           context: .
           dockerfile: ./elabtmp.Dockerfile
         container_name: elabtmp
-        # drop some capabilities
+        # restrict capabilities of the root user to the strict minimum
+        # see CIS Docker Benchmark v1.5 5.3
+        # see ANSSI-FT-082 23/09/2020 R8
         cap_drop:
-            - SYS_ADMIN
-            - AUDIT_WRITE
-            - MKNOD
-            - SYS_CHROOT
-            - SETFCAP
-            - NET_RAW
-            - SYS_PTRACE
+            - ALL
+        cap_add:
+            - CHOWN
+            - SETGID
+            - SETUID
+            - FOWNER
+            - DAC_OVERRIDE
         env_file:
             - elabftw-user.env
         environment:
