make the change password action require current password even through
api. Only Sysadmin can bypass that, or if we reset from the reset
password controller.

--- a/tests/populate-config.yml
+++ b/tests/populate-config.yml
@@ -54,6 +54,7 @@ users:
     firstname: Tata
     team: Bravo
     create_experiments: true
+    password: testPassword
 
   - email: somesamluser@example.com
     team: Bravo
