--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jquery-ui": "^1.13.0",
     "jsoneditor": "^9.0.3",
     "luxon": "^3.2.1",
-    "marked": "^4.0.10",
+    "marked": "^5.1.1",
     "mathjax-full": "^3.2.0",
     "mini-css-extract-plugin": "^2.1.0",
     "peggy": "^3.0.1",
@@ -56,7 +56,7 @@
     "@types/jquery": "^3.5.1",
     "@types/jqueryui": "^1.12.14",
     "@types/luxon": "^3.0.0",
-    "@types/marked": "^4.0.8",
+    "@types/marked": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "cypress": "^12.0.0",
@@ -79,6 +79,7 @@
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
     "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile --prod && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
     "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
     "buildcss": "sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
