--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "timers-browserify": "^2.0.12",
     "tinymce": "^5.10.0",
     "ts-loader": "^9.1.1",
-    "typescript": "^4.0.3",
+    "typescript": "^5.1.6",
     "ve-range-utils": "^2.6.3",
     "ve-sequence-utils": "^5.1.6",
     "webpack": "^5.9.0",
@@ -76,13 +76,15 @@
     "zopfli": "zopfli -i1000 web/assets/*.css web/assets/*.js web/assets/*.svg web/assets/images/*.svg web/assets/ove/*.css web/assets/ove/*.js",
     "build": "webpack-cli --progress --config builder.js",
     "build:dev": "webpack-cli --config builder.js",
+    "build:prod": "webpack-cli --mode production --env production --config builder.js",
     "buildnode": "webpack-cli --progress --config node-builder.js",
     "buildnode:dev": "webpack-cli --config node-builder.js",
     "buildall": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
-    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile --prod && yarn buildjs && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
+    "buildall:prod": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile --prod && yarn buildjs:prod && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser && yarn brotli && yarn zopfli",
     "buildall:dev": "CYPRESS_INSTALL_BINARY=0 yarn install --pure-lockfile && yarn build:dev && yarn buildnode:dev && yarn buildcss && yarn chemdoodle && yarn tinymce && yarn ove && yarn buildparser",
     "buildcss": "sass --quiet-deps --style compressed src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
     "buildjs": "yarn build && yarn buildnode",
+    "buildjs:prod": "yarn build:prod && yarn buildnode",
     "buildparser": "node ./src/node/grammar/generateParser.js",
     "buildprofile": "webpack-cli --config builder.js --profile --json > stats.json",
     "buildnodeprofile": "webpack-cli --config node-builder.js --profile --json > node-stats.json",
