--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,8 @@ jobs:
           command: docker cp elabtmp:/elabftw/tests/_output/coverage coverage-html
       - run:
           name: Generate the php documentation
-          command: docker exec -it elabtmp ./phpdoc -i ./cache -i ./uploads -d ./src/ -t phpdoc-html --setting=graphs.enabled=true
+          # Note:  --setting=graphs.enabled=true has been removed because the graphs are too large
+          command: docker exec -it elabtmp ./phpdoc -i ./cache -i ./uploads -d ./src/ -t phpdoc-html
       - run:
           name: Extract the php documentation
           command: docker cp elabtmp:/elabftw/phpdoc-html phpdoc-html
